Add new functional

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,110 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00],\n",
-       "        [ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00],\n",
-       "        [ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00],\n",
-       "        [ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00],\n",
-       "        [ 1.00000000e+00,  1.00000000e+00,  1.00000000e+00, ...,\n",
-       "          1.00000000e+00,  1.00000000e+00,  1.00000000e+00]],\n",
-       "\n",
-       "       [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
-       "        [ 4.23516474e-22, -1.43050602e-06, -2.14575493e-06, ...,\n",
-       "         -2.14575493e-06, -1.43050602e-06,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  2.49995708e-01,  3.74992847e-01, ...,\n",
-       "          3.74992847e-01,  2.49995708e-01,  0.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 0.00000000e+00,  2.49995708e-01,  3.74992847e-01, ...,\n",
-       "          3.74992847e-01,  2.49995708e-01,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00, -1.43050602e-06, -2.14575493e-06, ...,\n",
-       "         -2.14575493e-06, -1.43050602e-06,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  5.55434234e-02,  1.38859035e-01, ...,\n",
-       "          1.38859035e-01,  5.55434234e-02,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  5.55351592e-02,  1.38838375e-01, ...,\n",
-       "          1.38838375e-01,  5.55351592e-02,  0.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 0.00000000e+00,  5.55351592e-02,  1.38838375e-01, ...,\n",
-       "          1.38838375e-01,  5.55351592e-02,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  5.55434234e-02,  1.38859035e-01, ...,\n",
-       "          1.38859035e-01,  5.55434234e-02,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  4.63426758e-19,  9.15442411e-19, ...,\n",
-       "          9.15442411e-19,  4.63426758e-19,  0.00000000e+00],\n",
-       "        [-3.85185989e-34,  9.15442411e-19,  1.80834359e-18, ...,\n",
-       "          1.80834359e-18,  9.15442411e-19,  0.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 0.00000000e+00,  9.15442411e-19,  1.80834359e-18, ...,\n",
-       "          1.80834359e-18,  9.15442411e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  4.63426758e-19,  9.15442411e-19, ...,\n",
-       "          9.15442411e-19,  4.63426758e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  3.80506144e-19,  7.51642964e-19, ...,\n",
-       "          7.51642964e-19,  3.80506144e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  7.51642964e-19,  1.48477798e-18, ...,\n",
-       "          1.48477798e-18,  7.51642964e-19,  0.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 3.85185989e-34,  7.51642964e-19,  1.48477798e-18, ...,\n",
-       "          1.48477798e-18,  7.51642964e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  3.80506144e-19,  7.51642964e-19, ...,\n",
-       "          7.51642964e-19,  3.80506144e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00],\n",
-       "        [ 9.62964972e-35,  3.12422456e-19,  6.17152033e-19, ...,\n",
-       "          6.17152033e-19,  3.12422456e-19,  0.00000000e+00],\n",
-       "        [ 1.92592994e-34,  6.17152033e-19,  1.21910774e-18, ...,\n",
-       "          1.21910774e-18,  6.17152033e-19,  0.00000000e+00],\n",
-       "        ...,\n",
-       "        [ 0.00000000e+00,  6.17152033e-19,  1.21910774e-18, ...,\n",
-       "          1.21910774e-18,  6.17152033e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  3.12422456e-19,  6.17152033e-19, ...,\n",
-       "          6.17152033e-19,  3.12422456e-19,  0.00000000e+00],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,\n",
-       "          0.00000000e+00,  0.00000000e+00,  0.00000000e+00]]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 0\n",
     "b = 1\n",
     "c = 0\n",
     "d = 1\n",
     "T = 2\n",
+    "\n",
+    "k_x = lambda x, y : 1\n",
+    "k_y = lambda x, y : 1\n",
+    "q_x = lambda x, y : 1\n",
+    "q_y = lambda x, y : 1\n",
+    "\n",
+    "f = lambda x, y, t : 0\n",
+    "\n",
+    "mu_a = lambda y, t : 0\n",
+    "mu_b = lambda y, t : 0\n",
+    "mu_c = lambda x, t : 0\n",
+    "mu_d = lambda x, t : 0\n",
+    "\n",
+    "u0 = lambda x, y : 1\n",
+    "\n",
     "tau = 0.01\n",
     "h_x = 0.05\n",
     "h_y = 0.05\n",
@@ -129,54 +49,57 @@
     "N_x = int((b-a)/h_x) + 1\n",
     "N_y = int((d-c)/h_y) + 1\n",
     "U = np.zeros((M, N_x, N_y))\n",
+    "Xs = np.linspace(a, b, N_x)\n",
+    "Ys = np.linspace(c, d, N_y)\n",
+    "Ts = np.linspace(0, T, M)\n",
     "\n",
     "for i in range(N_x):\n",
     "    for j in range(N_y):\n",
-    "        U[0][i][j] = 1\n",
+    "        U[0][i][j] = u0(i*h_x, j*h_y)\n",
     "\n",
     "for n in range(1, M):\n",
     "    U_half = np.zeros((N_x, N_y))\n",
     "    for j in range(0, N_y):\n",
     "        if j == 0:\n",
-    "            U_half[:,0] = np.zeros(N_x)\n",
+    "            U_half[:,0] = np.fromiter(map(lambda x : mu_c(x, Ts[n]), Xs), float)\n",
     "        elif j == N_y - 1:\n",
-    "            U_half[:,N_y - 1] = np.zeros(N_x)\n",
+    "            U_half[:,N_y - 1] = np.fromiter(map(lambda x : mu_d(x, Ts[n]), Xs), float)\n",
     "        else:\n",
     "            A = np.zeros((N_x, N_x))\n",
     "            B = np.zeros(N_x)\n",
     "            for i in range(0, N_x):\n",
     "                if i == 0:\n",
     "                    A[0][0] = 1\n",
-    "                    B[0] = 0\n",
+    "                    B[0] = mu_a(Ys[j], Ts[n])\n",
     "                elif i == N_x-1:\n",
     "                    A[N_x - 1][N_x - 1] = 1\n",
-    "                    B[N_x - 1] = 0\n",
+    "                    B[N_x - 1] = mu_b(Ys[j], Ts[n])\n",
     "                else:\n",
-    "                    A[i][i-1] = tau/2/h_x**2\n",
-    "                    A[i][i] = -(tau/h_x**2 + 1)\n",
-    "                    A[i][i+1] = tau/2/h_x**2\n",
-    "                    B[i] = -(tau/2/h_y**2*(U[n-1][i][j+1]-2*U[n-1][i][j]+U[n-1][i][j-1]) + U[n-1][i][j])\n",
+    "                    A[i][i-1] = tau/2/h_x**2*q_x(Xs[i], Ys[j])*k_x((Xs[i]+Xs[i-1])/2, Ys[j])\n",
+    "                    A[i][i] = -(1 + tau/2/h_x**2*q_x(Xs[i], Ys[j])*(k_x((Xs[i]+Xs[i+1])/2, Ys[j]) + k_x((Xs[i]+Xs[i-1])/2, Ys[j])))\n",
+    "                    A[i][i+1] = tau/2/h_x**2*q_x(Xs[i], Ys[j])*k_x((Xs[i]+Xs[i+1])/2, Ys[j])\n",
+    "                    B[i] = -(U[n-1][i][j] + tau/2 * (f(Xs[i], Ys[j], (Ts[n]+Ts[n-1])/2) + q_y(Xs[i], Ys[j])/h_y**2*(k_y(Xs[i], (Ys[j]+Ys[j+1])/2)*(U[n-1][i][j+1] - U[n-1][i][j]) - k_y(Xs[i], (Ys[j]+Ys[j-1])/2)*(U[n-1][i][j] - U[n-1][i][j-1]))))\n",
     "            U_half[:,j] = np.linalg.solve(A, B)\n",
     "    for i in range(0, N_x):\n",
     "        if i == 0:\n",
-    "            U[n][0] = np.zeros(N_y)\n",
+    "            U[n][0] = np.fromiter(map(lambda y : mu_a(y, Ts[n]), Ys), float)\n",
     "        elif i == N_x - 1:\n",
-    "            U[n][N_x - 1] = np.zeros(N_y)\n",
+    "            U[n][N_x - 1] = np.fromiter(map(lambda y : mu_b(y, Ts[n]), Ys), float)\n",
     "        else:\n",
     "            A = np.zeros((N_y, N_y))\n",
     "            B = np.zeros(N_y)\n",
     "            for j in range(0, N_y):\n",
     "                if j == 0:\n",
     "                    A[0][0] = 1\n",
-    "                    B[0] = 0\n",
+    "                    B[0] = mu_c(Xs[i], Ts[n])\n",
     "                elif j == N_y-1:\n",
     "                    A[N_y - 1][N_y - 1] = 1\n",
-    "                    B[N_y - 1] = 0\n",
+    "                    B[N_y - 1] = mu_d(Xs[i], Ts[n])\n",
     "                else:\n",
-    "                    A[j][j-1] = tau/2/h_y**2\n",
-    "                    A[j][j] = -(tau/h_y**2 + 1)\n",
-    "                    A[j][j+1] = tau/2/h_y**2\n",
-    "                    B[j] = -(tau/2/h_x**2*(U_half[i+1][j]-2*U_half[i][j]+U_half[i-1][j]) + U_half[i][j])\n",
+    "                    A[j][j-1] = tau/2/h_y**2*q_y(Xs[i], Ys[j])*k_y(Xs[i], (Ys[j]+Ys[j-1])/2)\n",
+    "                    A[j][j] = -(1 + tau/2/h_y**2*q_y(Xs[i], Ys[j])*(k_y(Xs[i], (Ys[j]+Ys[j-1])/2) + k_y(Xs[i], (Ys[j]+Ys[j+1])/2)))\n",
+    "                    A[j][j+1] = tau/2/h_y**2*q_y(Xs[i], Ys[j])*k_y(Xs[i], (Ys[j]+Ys[j+1])/2)\n",
+    "                    B[j] = -(U_half[i][j] + tau/2 * (f(Xs[i], Ys[j], Ts[n]) + q_x(Xs[i], Ys[j])/h_x**2*(k_x((Xs[i] + Xs[i+1])/2, Ys[j])*(U_half[i+1][j] - U_half[i][j]) - k_x((Xs[i]+Xs[i-1])/2, Ys[j])*(U_half[i][j] - U_half[i-1][j]))))\n",
     "            U[n][i] = np.linalg.solve(A, B)\n",
     "    "
    ]
